# VarCleaner

./: Cargo.toml  README.txt
src/: main.rs
